# code-for-interview

./: CMakeLists.txt  README.md
include/: common.h  print.h  test_solution.h
script/: sense_machine.py
src/: common.cpp  main.cpp  my_print.cpp  test.cpp  test_solution.cpp
